# ai-traffic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  server.ts
ml_model/: Dockerfile  README.md  pyproject.toml
ml_model/src/: main.py
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: CameraLaneMonitor.tsx  ControlPanel.tsx  NetworkMap.tsx  Road.tsx  Simulation.tsx  TrafficLight.tsx  Vehicle.tsx
src/types/: coco-ssd.d.ts  leaflet-heat.d.ts
